crates/pg_syntax/tests/snapshots/postgres_regress/jsonpath@130.snap
---
source: crates/pg_syntax/tests/pg_syntax_tests.rs
description: "select '$ ? (@.a < +10.1e-1)'::jsonpath;"
---
SelectStmt@0..40
  Select@0..6 "select"
  Whitespace@6..7 " "
  ResTarget@7..39
    TypeCast@7..39
      AConst@7..29
        Sconst@7..29 "'$ ? (@.a < +10.1e-1)'"
      Typecast@29..31 "::"
      TypeName@31..39
        Ident@31..39 "jsonpath"
  Ascii59@39..40 ";"

